
####################Universal_C_Make############################

cmake_minimum_required(VERSION 3.17)
project(get_next_line C)

set(CMAKE_C_STANDARD 99)

#add_executable(get_next_line main.c)
file(GLOB SOURCE_FILES *.c *.h) # libft/*.c libft/*.h)

add_executable(get_next_line ${SOURCE_FILES})

####################Universal_C_Make############################


#cmake_minimum_required(VERSION 3.17)
#project(orgin C)
#
#set(CMAKE_C_STANDARD 99)
#
##add_executable(lvl2_ft_printf main.c)
#file(GLOB SOURCE_FILES *.c *.h libft/*.c libft/*.h)
#
#add_executable(orgin ${SOURCE_FILES})

##[[
#cmake_minimum_required(VERSION 3.17)
#project(get_next_line)
#
#set(CMAKE_C_STANDARD 99)
#
#add_executable(
#        get_next_line
#        ft_printf.h
#        ft_disp_char.c
#        ft_disp_hex.c
#        ft_disp_int.c
#        ft_disp_str.c
#        ft_disp_uns.c
#        ft_get_type.c
#        ft_hexlen.c
#        ft_init.c
#        ft_intlen.c
#        ft_parser.c
#        ft_printf.c
#        ft_putchar.c
#        ft_putnbr.c
#        ft_putstr.c
#        ft_separator.c
#        ft_disp_pointer.c)
##        main_test.c)
#target_link_libraries(orgin /home/aleksandr/CLionProjects/orgin/libft/libft.a)]]
